@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Neil Bowers
 copyright_year   = 2014
 
-version = 0.02
+version = 0.03
 
 [@Basic]
 [PkgVersion]
